--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ main {
 
 .album-card img {
     width: 100%;
-    height: 250px;
+    height: 100%;
     object-fit: cover;
     transition: transform 0.3s ease;
 }
